# llama_deploy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
llama_deploy/: __init__.py  __main__.py  cli.py  config.py  health.py  log.py  model.py  nginx.py  orchestrator.py  service.py  system.py  tokens.py  wizard.py
tests/: test_cli.py  test_nginx.py  test_orchestrator_auto.py  test_orchestrator_token.py  test_service.py  test_system_ports.py  test_tokens.py  test_wizard.py
